<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    tools:context=".ui.Activity.FetchTOTData">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true"
        android:layout_margin="16dp"
        android:elevation="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctstartTOT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/tvShiftStart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fetch_totalizer_start_msg"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                android:padding="6dp"
                android:gravity="center"
                android:fontFamily="@font/montserrat_bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/etTotalizerValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/totalizer_value_hint"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:visibility="gone"
                android:background="@drawable/edittext_background"
                app:layout_constraintTop_toBottomOf="@id/tvShiftStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/tvPleaseWait"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/please_wait_label"
                android:visibility="visible"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/etTotalizerValue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" />

            <Button
                android:id="@+id/btnReadTotalizer"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/read_du_totalizer"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/primary"
                app:layout_constraintTop_toBottomOf="@id/tvPleaseWait"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/proceed_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_number_violet_shape"
        android:padding="12dp"
        android:text="@string/proceed_label"
        android:visibility="gone"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardContainer"
        app:layout_constraintVertical_bias="0.866" />

</androidx.constraintlayout.widget.ConstraintLayout>
