<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/quantity_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_curve_grey_small"

        android:layout_marginVertical="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingVertical="3dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/batchname_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingVertical="2dp">

            <TextView
                android:id="@+id/batch_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/avenirnextltpro_medium"
                android:text="@string/batch"
                android:textSize="13dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/batch_pricelayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:background="@drawable/shape_curve_grey_small"
            android:orientation="vertical"
            android:paddingVertical="2dp">

            <TextView
                android:id="@+id/batch_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/avenirnextltpro_medium"
                android:text="@string/price"
                android:textSize="13dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/batch_stock_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:background="@drawable/shape_curve_grey_small"
            android:orientation="vertical"
            android:paddingVertical="2dp">

            <TextView
                android:id="@+id/batch_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/avenirnextltpro_medium"
                android:text="@string/stock"
                android:textSize="13dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sale_quantity_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:background="@drawable/shape_curve_grey_small"
            android:orientation="vertical"
            android:paddingVertical="2dp">

            <EditText
                android:id="@+id/sale_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_edittext_background"
                android:fontFamily="@font/avenirnextltpro_medium"
                android:gravity="center"
                android:hint="@string/quantity"
                android:inputType="number"
                android:maxLength="8"
                android:minWidth="80dp"
                android:paddingHorizontal="6dp"
                android:paddingVertical="5dp"
                android:textColor="@color/primary"
                android:textSize="15dp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>